frontend/src/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  transition-duration: 200ms !important;
}
html {
  background-color: rgba(27, 38, 54, 1);
}
body {
  margin: 0;
  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
}

/* hide scrol bar in a */
::-webkit-scrollbar {
  width: 0px;
}

